@@ -21,7 +21,7 @@ class GridGrindJsonTest {
             {
               "source": { "mode": "NEW" },
               "operations": [],
-              "analysis": { "sheets": [] }
+              "reads": []
             }
             """
                 .getBytes(StandardCharsets.UTF_8));
@@ -38,7 +38,7 @@ class GridGrindJsonTest {
               "protocolVersion": "V1",
               "source": { "mode": "NEW" },
               "operations": [],
-              "analysis": { "sheets": [] }
+              "reads": []
             }
             """
                 .getBytes(StandardCharsets.UTF_8))) {
@@ -54,15 +54,19 @@ class GridGrindJsonTest {
     GridGrindResponse expected =
         new GridGrindResponse.Success(
             GridGrindProtocolVersion.V1,
-            "/tmp/budget.xlsx",
-            new GridGrindResponse.WorkbookSummary(1, List.of("Budget"), 1, true),
+            new GridGrindResponse.PersistenceOutcome.Saved("/tmp/budget.xlsx"),
             List.of(
-                new GridGrindResponse.NamedRangeReport.RangeReport(
-                    "BudgetTotal",
-                    new NamedRangeScope.Workbook(),
-                    "Budget!$B$4",
-                    new NamedRangeTarget("Budget", "B4"))),
-            List.of(new GridGrindResponse.SheetReport("Budget", 1, 0, 1, List.of(), List.of())));
+                new WorkbookReadResult.WorkbookSummaryResult(
+                    "workbook",
+                    new GridGrindResponse.WorkbookSummary(1, List.of("Budget"), 1, true)),
+                new WorkbookReadResult.NamedRangesResult(
+                    "named-ranges",
+                    List.of(
+                        new GridGrindResponse.NamedRangeReport.RangeReport(
+                            "BudgetTotal",
+                            new NamedRangeScope.Workbook(),
+                            "Budget!$B$4",
+                            new NamedRangeTarget("Budget", "B4"))))));
 
     ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
     GridGrindJson.writeResponse(outputStream, expected);
@@ -83,7 +87,22 @@ class GridGrindJsonTest {
         assertThrows(
             InvalidJsonException.class,
             () -> GridGrindJson.readRequest("{".getBytes(StandardCharsets.UTF_8)));
-    InvalidJsonException requestStreamFailure =
+    InvalidJsonException responseFailure =
+        assertThrows(
+            InvalidJsonException.class,
+            () -> GridGrindJson.readResponse("{".getBytes(StandardCharsets.UTF_8)));
+
+    assertNotNull(requestFailure.getMessage());
+    assertNotNull(responseFailure.getMessage());
+    assertFalse(requestFailure.getMessage().contains("[Source:"));
+    assertNull(requestFailure.jsonPath());
+    assertEquals(1, requestFailure.jsonLine());
+    assertEquals(2, requestFailure.jsonColumn());
+  }
+
+  @Test
+  void wrapsMalformedJsonInputStreamsAsInvalidPayloadErrors() {
+    InvalidJsonException requestFailure =
         assertThrows(
             InvalidJsonException.class,
             () ->
@@ -92,23 +111,12 @@ class GridGrindJsonTest {
     InvalidJsonException responseFailure =
         assertThrows(
             InvalidJsonException.class,
-            () -> GridGrindJson.readResponse("{".getBytes(StandardCharsets.UTF_8)));
-    InvalidJsonException responseStreamFailure =
-        assertThrows(
-            InvalidJsonException.class,
             () ->
                 GridGrindJson.readResponse(
                     new ByteArrayInputStream("{".getBytes(StandardCharsets.UTF_8))));
 
     assertNotNull(requestFailure.getMessage());
-    assertNotNull(requestStreamFailure.getMessage());
     assertNotNull(responseFailure.getMessage());
-    assertNotNull(responseStreamFailure.getMessage());
-    assertFalse(requestFailure.getMessage().contains("[Source:"));
-    assertFalse(requestFailure.getMessage().contains("reference chain"));
-    assertNull(requestFailure.jsonPath());
-    assertEquals(1, requestFailure.jsonLine());
-    assertEquals(2, requestFailure.jsonColumn());
   }
 
   @Test
@@ -122,19 +130,22 @@ class GridGrindJsonTest {
                 {
                   "source": { "mode": "NEW" },
                   "operations": [],
-                  "analysis": {
-                    "sheets": [
-                      { "sheetName": "Budget", "previewRowCount": 0, "previewColumnCount": 1 }
-                    ]
-                  }
+                  "reads": [
+                    {
+                      "type": "GET_WINDOW",
+                      "requestId": "window",
+                      "sheetName": "Budget",
+                      "topLeftAddress": "A1",
+                      "rowCount": 0,
+                      "columnCount": 1
+                    }
+                  ]
                 }
                 """
                         .getBytes(StandardCharsets.UTF_8)));
 
-    assertEquals("previewRowCount must be greater than 0", requestFailure.getMessage());
-    assertEquals("analysis.sheets[0]", requestFailure.jsonPath());
-    assertEquals(6, requestFailure.jsonLine());
-    assertEquals(78, requestFailure.jsonColumn());
+    assertEquals("rowCount must be greater than 0", requestFailure.getMessage());
+    assertEquals("reads[0]", requestFailure.jsonPath());
   }
 
   @Test
@@ -148,7 +159,7 @@ class GridGrindJsonTest {
                     {
                       "source": { "mode": "EXISTING", "path": "budget.xlsm" },
                       "operations": [],
-                      "analysis": { "sheets": [] }
+                      "reads": []
                     }
                     """
                         .getBytes(StandardCharsets.UTF_8)));
@@ -156,29 +167,10 @@ class GridGrindJsonTest {
         "path must point to a .xlsx workbook; .xls, .xlsm, and .xlsb are not supported: budget.xlsm",
         sourceFailure.getMessage());
     assertEquals("source", sourceFailure.jsonPath());
-
-    InvalidRequestException persistenceFailure =
-        assertThrows(
-            InvalidRequestException.class,
-            () ->
-                GridGrindJson.readRequest(
-                    """
-                    {
-                      "source": { "mode": "NEW" },
-                      "persistence": { "mode": "SAVE_AS", "path": "output.xls" },
-                      "operations": [],
-                      "analysis": { "sheets": [] }
-                    }
-                    """
-                        .getBytes(StandardCharsets.UTF_8)));
-    assertEquals(
-        "path must point to a .xlsx workbook; .xls, .xlsm, and .xlsb are not supported: output.xls",
-        persistenceFailure.getMessage());
-    assertEquals("persistence", persistenceFailure.jsonPath());
   }
 
   @Test
-  void readsSheetManagementOperationsFromJson() throws IOException {
+  void readsWorkbookOperationsFromJson() throws IOException {
     GridGrindRequest request =
         GridGrindJson.readRequest(
             """
@@ -186,211 +178,120 @@ class GridGrindJsonTest {
               "source": { "mode": "NEW" },
               "operations": [
                 { "type": "RENAME_SHEET", "sheetName": "Budget", "newSheetName": "Summary" },
-                { "type": "DELETE_SHEET", "sheetName": "Scratch" },
-                { "type": "MOVE_SHEET", "sheetName": "Summary", "targetIndex": 0 }
-              ],
-              "analysis": { "sheets": [] }
-            }
-            """
-                .getBytes(StandardCharsets.UTF_8));
-
-    assertEquals(3, request.operations().size());
-    assertInstanceOf(WorkbookOperation.RenameSheet.class, request.operations().get(0));
-    assertInstanceOf(WorkbookOperation.DeleteSheet.class, request.operations().get(1));
-    assertInstanceOf(WorkbookOperation.MoveSheet.class, request.operations().get(2));
-
-    WorkbookOperation.RenameSheet renameSheet =
-        (WorkbookOperation.RenameSheet) request.operations().get(0);
-    WorkbookOperation.MoveSheet moveSheet =
-        (WorkbookOperation.MoveSheet) request.operations().get(2);
-    assertEquals("Summary", renameSheet.newSheetName());
-    assertEquals(0, moveSheet.targetIndex());
-  }
-
-  @Test
-  void readsStructuralLayoutOperationsFromJson() throws IOException {
-    GridGrindRequest request =
-        GridGrindJson.readRequest(
-            """
-            {
-              "source": { "mode": "NEW" },
-              "operations": [
-                { "type": "MERGE_CELLS", "sheetName": "Budget", "range": "A1:B2" },
-                { "type": "UNMERGE_CELLS", "sheetName": "Budget", "range": "A1:B2" },
-                {
-                  "type": "SET_COLUMN_WIDTH",
-                  "sheetName": "Budget",
-                  "firstColumnIndex": 0,
-                  "lastColumnIndex": 2,
-                  "widthCharacters": 16.0
-                },
-                {
-                  "type": "SET_ROW_HEIGHT",
-                  "sheetName": "Budget",
-                  "firstRowIndex": 0,
-                  "lastRowIndex": 3,
-                  "heightPoints": 28.5
-                },
-                {
-                  "type": "FREEZE_PANES",
-                  "sheetName": "Budget",
-                  "splitColumn": 1,
-                  "splitRow": 2,
-                  "leftmostColumn": 1,
-                  "topRow": 2
-                }
-              ],
-              "analysis": { "sheets": [] }
-            }
-            """
-                .getBytes(StandardCharsets.UTF_8));
-
-    assertEquals(5, request.operations().size());
-    assertInstanceOf(WorkbookOperation.MergeCells.class, request.operations().get(0));
-    assertInstanceOf(WorkbookOperation.UnmergeCells.class, request.operations().get(1));
-    assertInstanceOf(WorkbookOperation.SetColumnWidth.class, request.operations().get(2));
-    assertInstanceOf(WorkbookOperation.SetRowHeight.class, request.operations().get(3));
-    assertInstanceOf(WorkbookOperation.FreezePanes.class, request.operations().get(4));
-
-    WorkbookOperation.SetColumnWidth setColumnWidth =
-        (WorkbookOperation.SetColumnWidth) request.operations().get(2);
-    WorkbookOperation.FreezePanes freezePanes =
-        (WorkbookOperation.FreezePanes) request.operations().get(4);
-    assertEquals(16.0, setColumnWidth.widthCharacters());
-    assertEquals(2, freezePanes.topRow());
-  }
-
-  @Test
-  void readsFormattingDepthStylePatchesFromJson() throws IOException {
-    GridGrindRequest request =
-        GridGrindJson.readRequest(
-            """
-            {
-              "source": { "mode": "NEW" },
-              "operations": [
+                { "type": "MERGE_CELLS", "sheetName": "Summary", "range": "A1:B2" },
                 {
                   "type": "APPLY_STYLE",
-                  "sheetName": "Budget",
+                  "sheetName": "Summary",
                   "range": "A1",
                   "style": {
-                    "bold": true,
-                    "wrapText": true,
-                    "horizontalAlignment": "CENTER",
-                    "verticalAlignment": "TOP",
                     "fontName": "Aptos",
                     "fontHeight": { "type": "POINTS", "points": 11.5 },
-                    "fontColor": "#1f4e78",
-                    "underline": true,
-                    "strikeout": true,
                     "fillColor": "#fff2cc",
                     "border": {
                       "all": { "style": "THIN" },
                       "right": { "style": "DOUBLE" }
                     }
                   }
+                },
+                {
+                  "type": "SET_HYPERLINK",
+                  "sheetName": "Summary",
+                  "address": "A1",
+                  "target": { "type": "URL", "target": "https://example.com/report" }
+                },
+                {
+                  "type": "SET_NAMED_RANGE",
+                  "name": "BudgetTotal",
+                  "scope": { "type": "WORKBOOK" },
+                  "target": { "sheetName": "Summary", "range": "B4" }
                 }
               ],
-              "analysis": { "sheets": [] }
+              "reads": []
             }
             """
                 .getBytes(StandardCharsets.UTF_8));
 
-    assertEquals(1, request.operations().size());
-    assertInstanceOf(WorkbookOperation.ApplyStyle.class, request.operations().getFirst());
-    WorkbookOperation.ApplyStyle applyStyle =
-        (WorkbookOperation.ApplyStyle) request.operations().getFirst();
+    assertEquals(5, request.operations().size());
+    assertInstanceOf(WorkbookOperation.RenameSheet.class, request.operations().get(0));
+    assertInstanceOf(WorkbookOperation.MergeCells.class, request.operations().get(1));
+    assertInstanceOf(WorkbookOperation.ApplyStyle.class, request.operations().get(2));
+    assertInstanceOf(WorkbookOperation.SetHyperlink.class, request.operations().get(3));
+    assertInstanceOf(WorkbookOperation.SetNamedRange.class, request.operations().get(4));
 
+    WorkbookOperation.ApplyStyle applyStyle =
+        (WorkbookOperation.ApplyStyle) request.operations().get(2);
     assertEquals("Aptos", applyStyle.style().fontName());
     assertEquals(
         new BigDecimal("11.5"), applyStyle.style().fontHeight().toExcelFontHeight().points());
-    assertEquals("#1F4E78", applyStyle.style().fontColor());
-    assertTrue(applyStyle.style().underline());
-    assertTrue(applyStyle.style().strikeout());
     assertEquals("#FFF2CC", applyStyle.style().fillColor());
     assertEquals(ExcelBorderStyle.THIN, applyStyle.style().border().all().style());
     assertEquals(ExcelBorderStyle.DOUBLE, applyStyle.style().border().right().style());
   }
 
   @Test
-  void readsExcelAuthoringOperationsAndNamedRangeAnalysisFromJson() throws IOException {
+  void readsWorkbookReadOperationsFromJson() throws IOException {
     GridGrindRequest request =
         GridGrindJson.readRequest(
             """
             {
               "source": { "mode": "NEW" },
-              "operations": [
+              "operations": [],
+              "reads": [
+                { "type": "GET_WORKBOOK_SUMMARY", "requestId": "workbook" },
                 {
-                  "type": "SET_HYPERLINK",
-                  "sheetName": "Budget",
-                  "address": "A1",
-                  "target": { "type": "URL", "target": "https://example.com/report" }
+                  "type": "GET_NAMED_RANGES",
+                  "requestId": "named-ranges",
+                  "selection": {
+                    "mode": "SELECTED",
+                    "selectors": [
+                      { "type": "WORKBOOK_SCOPE", "name": "BudgetTotal" }
+                    ]
+                  }
                 },
                 {
-                  "type": "SET_COMMENT",
+                  "type": "GET_WINDOW",
+                  "requestId": "window",
                   "sheetName": "Budget",
-                  "address": "A1",
-                  "comment": { "text": "Review", "author": "GridGrind", "visible": true }
+                  "topLeftAddress": "A1",
+                  "rowCount": 4,
+                  "columnCount": 3
                 },
                 {
-                  "type": "SET_NAMED_RANGE",
-                  "name": "BudgetTotal",
-                  "scope": { "type": "WORKBOOK" },
-                  "target": { "sheetName": "Budget", "range": "B4" }
+                  "type": "ANALYZE_FORMULA_SURFACE",
+                  "requestId": "formula-surface",
+                  "selection": { "mode": "ALL" }
                 }
-              ],
-              "analysis": {
-                "sheets": [],
-                "namedRanges": {
-                  "mode": "SELECTED",
-                  "selectors": [
-                    { "type": "WORKBOOK_SCOPE", "name": "BudgetTotal" }
-                  ]
-                }
-              }
+              ]
             }
             """
                 .getBytes(StandardCharsets.UTF_8));
 
-    assertEquals(3, request.operations().size());
-    assertInstanceOf(WorkbookOperation.SetHyperlink.class, request.operations().get(0));
-    assertInstanceOf(WorkbookOperation.SetComment.class, request.operations().get(1));
-    assertInstanceOf(WorkbookOperation.SetNamedRange.class, request.operations().get(2));
-    assertInstanceOf(
-        GridGrindRequest.WorkbookAnalysisRequest.NamedRangeInspection.Selected.class,
-        request.analysis().namedRanges());
-
-    WorkbookOperation.SetHyperlink setHyperlink =
-        (WorkbookOperation.SetHyperlink) request.operations().get(0);
-    WorkbookOperation.SetComment setComment =
-        (WorkbookOperation.SetComment) request.operations().get(1);
-    WorkbookOperation.SetNamedRange setNamedRange =
-        (WorkbookOperation.SetNamedRange) request.operations().get(2);
-    assertEquals(
-        "https://example.com/report", ((HyperlinkTarget.Url) setHyperlink.target()).target());
-    assertTrue(setComment.comment().visible());
-    assertEquals("BudgetTotal", setNamedRange.name());
+    assertEquals(4, request.reads().size());
+    assertInstanceOf(WorkbookReadOperation.GetWorkbookSummary.class, request.reads().get(0));
+    assertInstanceOf(WorkbookReadOperation.GetNamedRanges.class, request.reads().get(1));
+    assertInstanceOf(WorkbookReadOperation.GetWindow.class, request.reads().get(2));
+    assertInstanceOf(WorkbookReadOperation.AnalyzeFormulaSurface.class, request.reads().get(3));
   }
 
   @Test
   void wrapsRecordConstructionFailureAsInvalidPayloadError() {
-    // Parsing a response where CellStyleReport.numberFormat is null triggers a NullPointerException
-    // inside the record compact constructor. Jackson catches and wraps it as a JacksonException.
     InvalidJsonException failure =
         assertThrows(
             InvalidJsonException.class,
             () ->
                 GridGrindJson.readResponse(
                     """
-                    {"status":"SUCCESS","protocolVersion":"V1","savedWorkbookPath":null,\
-                    "workbook":{"sheetCount":0,"sheetNames":[],"forceFormulaRecalculationOnOpen":false},\
-                    "sheets":[{"sheetName":"X","physicalRowCount":0,"lastRowIndex":0,"lastColumnIndex":0,\
-                    "requestedCells":[{"effectiveType":"BLANK","address":"A1","declaredType":"BLANK",\
-                    "displayValue":"","style":{"numberFormat":null,"bold":false,"italic":false,\
-                    "wrapText":false,"horizontalAlignment":"GENERAL","verticalAlignment":"BOTTOM",\
-                    "fontName":"Calibri","fontHeight":{"twips":220,"points":11},"fontColor":null,"underline":false,\
-                    "strikeout":false,"fillColor":null,"topBorderStyle":"NONE",\
-                    "rightBorderStyle":"NONE","bottomBorderStyle":"NONE","leftBorderStyle":"NONE"}}],\
-                    "previewRows":[]}]}"""
+                    {"status":"SUCCESS","protocolVersion":"V1","persistence":{"mode":"NOT_SAVED"},\
+                    "reads":[{"type":"WORKBOOK_SUMMARY","requestId":"workbook","workbook":{"sheetCount":0,\
+                    "sheetNames":[],"namedRangeCount":0,"forceFormulaRecalculationOnOpen":false}},\
+                    {"type":"WINDOW","requestId":"window","window":{"sheetName":"Budget","topLeftAddress":"A1",\
+                    "rowCount":1,"columnCount":1,"rows":[{"rowIndex":0,"cells":[{"effectiveType":"BLANK",\
+                    "address":"A1","declaredType":"BLANK","displayValue":"","style":{"numberFormat":null,\
+                    "bold":false,"italic":false,"wrapText":false,"horizontalAlignment":"GENERAL",\
+                    "verticalAlignment":"BOTTOM","fontName":"Calibri","fontHeight":{"twips":220,"points":11},\
+                    "fontColor":null,"underline":false,"strikeout":false,"fillColor":null,\
+                    "topBorderStyle":"NONE","rightBorderStyle":"NONE","bottomBorderStyle":"NONE",\
+                    "leftBorderStyle":"NONE"}}]}]}}]}"""
                         .getBytes(StandardCharsets.UTF_8)));
 
     assertNotNull(failure.getMessage());
@@ -399,8 +300,6 @@ class GridGrindJsonTest {
 
   @Test
   void wrapsDateTimeParseFailuresAsInvalidRequestErrors() {
-    // Jackson's LocalDate deserializer throws DateTimeParseException (a DateTimeException)
-    // when the input string is not a valid ISO-8601 date. validationCause must detect it.
     InvalidRequestException failure =
         assertThrows(
             InvalidRequestException.class,
@@ -417,18 +316,16 @@ class GridGrindJsonTest {
                           "value": { "type": "DATE", "date": "not-a-date" }
                         }
                       ],
-                      "analysis": { "sheets": [] }
+                      "reads": []
                     }
                     """
-                        .getBytes(java.nio.charset.StandardCharsets.UTF_8)));
+                        .getBytes(StandardCharsets.UTF_8)));
 
     assertNotNull(failure.getMessage());
   }
 
   @Test
-  void stripsJacksonSourceLocationFromInvalidEnumValueMessages() throws IOException {
-    // An unrecognised enum value produces an InvalidFormatException whose raw message
-    // contains " at [Source:" — verify the cleaned message does not expose that suffix.
+  void stripsJacksonSourceLocationFromInvalidEnumValueMessages() {
     InvalidJsonException failure =
         assertThrows(
             InvalidJsonException.class,
@@ -439,10 +336,10 @@ class GridGrindJsonTest {
                       "protocolVersion": "INVALID_VERSION",
                       "source": { "mode": "NEW" },
                       "operations": [],
-                      "analysis": { "sheets": [] }
+                      "reads": []
                     }
                     """
-                        .getBytes(java.nio.charset.StandardCharsets.UTF_8)));
+                        .getBytes(StandardCharsets.UTF_8)));
 
     assertNotNull(failure.getMessage());
     assertFalse(failure.getMessage().contains("[Source:"));
